--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,8 +9,9 @@ header {
   background: #fff;
 }
 header .container{
-  margin: 0;
-  padding: 1rem 2rem;
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 10px 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -39,11 +40,19 @@ header a {
   margin: 20px auto;
   padding: 20px;
   position: relative;
+  box-shadow: 2px 2px 5px rgba(0,0,0,0.05);
 }
 
 .workout-details h4 {
-  color: green;
+  margin: 0 0 10px 0;
   font-size: large;
+  color: green;
+}
+
+.workout-details p {
+  margin: 0;
+  font-size: 0.9em;
+  color: #555;
 }
 
 .workout-details button {
@@ -55,6 +64,7 @@ header a {
   padding: 6px;
   border: 0px;
   border-radius: 50%;
+  color: #333;
 }
 
 .workout-details button:hover {
@@ -86,8 +96,10 @@ input {
 
 form button {
   background: green;
+  border: 0;
   color: #fff;
   padding: 10px;
+  font-family: "Poppins";
   border-radius: 4px;
   cursor: pointer;
 }
@@ -104,4 +116,34 @@ div.error {
 
 input.error {
   border: 1px solid red;
+}
+
+/* login form */
+nav {
+  display: flex;
+  align-items: center;
+}
+
+nav a {
+  margin-left: 10px;
+}
+
+nav button {
+  background: #fff;
+  color: green;
+  border: 2px solid green;
+  padding: 6px 10px;
+  border-radius: 4px;
+  font-family: 'Poppins';
+  cursor: pointer;
+  font-size: 1em;
+}
+
+/* auth forms */
+form.signup, form.login {
+  max-width: 400px;
+  margin: 40px auto;
+  padding: 20px;
+  background: #fff;
+  border-radius: 4px;
 }
